Fix alignment. Remove test code.

--- a/Palladium Rifts by Grinning Gecko/src/scss/rifts.scss
+++ b/Palladium Rifts by Grinning Gecko/src/scss/rifts.scss
@@ -343,6 +343,7 @@ img.logo {
   display: grid;
   gap: 0.5rem;
   grid-template-columns: max-content 5rem 5rem 5rem;
+  align-items: center;
 
   span {
     @include readonly;
@@ -365,6 +366,7 @@ img.logo {
     display: grid;
     grid-template-columns: 8rem 10rem 4rem;
     gap: 0.5rem;
+    align-items: center;
   }
 }
 
@@ -524,7 +526,7 @@ img.logo {
 }
 
 .charsheet .tall {
-  height: 300px;
+  height: 600px;
 }
 
 /*****************/
